reworking chunk api